<resources>
    <string name="app_name">Quizlet</string>
    <string name="terms_of_service">Điều khoản dịch vụ</string>
    <string name="privacy_policy">Chính sách quyền riêng tư</string>
    <string name="rule">Bằng việc đăng ký, tôi chấp thuận Điều khoản dịch vụ và Chính sách quyền riêng tư của Quizlet</string>
    <string name="register">Đăng ký miễn phí</string>
    <string name="login">Hoặc đăng nhập</string>

    <string name="onboard_1_title">Hơn 90% học sinh sử dụng Quizlet cho biết họ đã cải thiện được điểm số.</string>
    <string name="onboard_2_title">Tìm kiếm hàng triệu bộ thẻ ghi nhớ.</string>
    <string name="onboard_3_title">Học bằng bốn cách khác nhau.</string>
    <string name="onboard_4_title">Tùy chỉnh thẻ ghi nhớ theo nhu cầu của bạn.</string>
    <string name="dang_nhap_nhanh_bang">ĐĂNG NHẬP NHANH BẰNG</string>
    <string name="hoac_dang_ki_bang_email">HOẶC ĐĂNG KÝ BẰNG EMAIL</string>
    <string name="ngay_sinh">NGÀY SINH</string>
    <string name="email_cua_bo_me">EMAIL CỦA BỐ MẸ</string>
    <string name="mat_khau">MẬT KHẨU</string>
    <string name="dang_ky">Đăng ký</string>
    <string name="hoac_dang_nhap_bang_email_cua_bạn">HOẶC ĐĂNG NHẬP BẰNG EMAIL CỦA BẠN</string>
    <string name="nhap_email_hoac_ten_nguoi_dung_cua_ban">Nhập email hoặc tên người dùng của bạn</string>
    <string name="email_hoac_ten_nguoi_dung">EMAIL HOẶC TÊN NGƯỜI DÙNG</string>
    <string name="nhap_mat_khau_cua_ban">Nhập mật khẩu của bạn</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="quen_ten_nguoi_dung_hoac_mat_khau">Quên tên người dùng hoặc mật khẩu?</string>

    <string name="default_web_client_id">644211755301-6tssvi92phteaovgdmn9bo3p17nn6adm.apps.googleusercontent.com</string>

<!--    <string name="facebook_app_id">889945206065866</string>>-->
<!--    <string name="fb_login_protocol_scheme">fb889945206065866</string>-->
<!--    <string name="facebook_client_token">56789</string>-->
</resources>