<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_text_fast_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/dang_nhap_nhanh_bang"
            android:textColor="@color/text_color_2"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <LinearLayout
            android:id="@+id/layout_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_text_fast_login">

            <Button
                android:id="@+id/btn_google"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@drawable/background_white_button_2"
                android:drawableStart="@drawable/icon_google"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:drawablePadding="16dp"
                android:text="Google"
                android:textAllCaps="false"
                android:textColor="@color/text_color_2"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText,VisualLintButtonSize" />

            <Button
                android:id="@+id/btn_facebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@drawable/background_white_button_2"
                android:drawableStart="@drawable/icon_facebook"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:drawablePadding="16dp"
                android:text="Facebook"
                android:textAllCaps="false"
                android:textColor="@color/text_color_2"
                android:textSize="18sp"
                android:textStyle="bold"
                android:maxWidth="320dp"
                tools:ignore="HardcodedText,VisualLintButtonSize" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/hoac_dang_nhap_bang_email_cua_bạn"
            android:textColor="@color/text_color_2"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_register"/>

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:hint="@string/nhap_email_hoac_ten_nguoi_dung_cua_ban"
            android:inputType="textEmailAddress"
            android:paddingTop="12dp"
            android:paddingBottom="24dp"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_text_login"
            tools:ignore="Autofill,VisualLintTextFieldSize,TextContrastCheck" />
        <TextView
            android:id="@+id/tv_text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/email_hoac_ten_nguoi_dung"
            android:textColor="@color/text_color_2"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_email"/>

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:hint="@string/nhap_mat_khau_cua_ban"
            android:inputType="textPassword"
            android:paddingTop="12dp"
            android:paddingBottom="24dp"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_text_email"
            tools:ignore="Autofill,VisualLintTextFieldSize,TextContrastCheck" />
        <TextView
            android:id="@+id/tv_text_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/mat_khau"
            android:textColor="@color/text_color_2"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_password"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_blue_button"
            android:padding="16dp"
            android:text="@string/dang_nhap"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_text_password"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />
        <TextView
            android:id="@+id/tv_text_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quen_ten_nguoi_dung_hoac_mat_khau"
            android:textColor="@color/text_color_2"
            android:layout_marginTop="16dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_rule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rule"
            android:textColor="@color/text_color_2"
            android:layout_marginBottom="16dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>