<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color_of_app"
        tools:context=".RegisterActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_text_fast_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/dang_nhap_nhanh_bang"
            android:textColor="@color/text_color_2"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <LinearLayout
            android:id="@+id/layout_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_text_fast_login">

            <Button
                android:id="@+id/btn_google"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@drawable/background_white_button_2"
                android:drawableStart="@drawable/icon_google"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:drawablePadding="16dp"
                android:text="Google"
                android:textAllCaps="false"
                android:textColor="@color/text_color_2"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText,VisualLintButtonSize" />

            <Button
                android:id="@+id/btn_facebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@drawable/background_white_button_2"
                android:drawableStart="@drawable/icon_facebook"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:drawablePadding="16dp"
                android:text="Facebook"
                android:textAllCaps="false"
                android:textColor="@color/text_color_2"
                android:textSize="18sp"
                android:textStyle="bold"
                android:maxWidth="320dp"
                tools:ignore="HardcodedText,VisualLintButtonSize" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_text_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/hoac_dang_ki_bang_email"
            android:textColor="@color/text_color_2"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_register"/>

        <EditText
            android:id="@+id/edt_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="8 thg 1, 2024"
            android:paddingTop="12dp"
            android:paddingBottom="24dp"
            android:drawableEnd="@drawable/outline_info_24"
            android:textColorHint="@color/hint_color"
            app:layout_constraintTop_toBottomOf="@id/tv_text_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_vertical"
            android:inputType="text"
            tools:ignore="Autofill,HardcodedText,VisualLintTextFieldSize" />
        <TextView
            android:id="@+id/tv_text_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/ngay_sinh"
            android:textColor="@color/text_color_2"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_dob"/>

        <EditText
            android:id="@+id/edt_parent_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:hint="email@example.com"
            android:inputType="textEmailAddress"
            android:paddingTop="12dp"
            android:paddingBottom="24dp"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_text_dob"
            tools:ignore="Autofill,HardcodedText,VisualLintTextFieldSize,TextContrastCheck" />
        <TextView
            android:id="@+id/tv_text_parent_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/email_cua_bo_me"
            android:textColor="@color/text_color_2"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_parent_email"/>

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint=".........."
            android:paddingTop="12dp"
            android:paddingBottom="24dp"
            android:drawableEnd="@drawable/outline_remove_red_eye_24"
            android:textColorHint="@color/hint_color"
            app:layout_constraintTop_toBottomOf="@id/tv_text_parent_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            tools:ignore="Autofill,HardcodedText,VisualLintTextFieldSize" />
        <TextView
            android:id="@+id/tv_text_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/mat_khau"
            android:textColor="@color/text_color_2"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_password"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_gray_button"
            android:text="@string/dang_ky"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp"
            android:padding="16dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tv_text_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tv_text_rule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rule"
            android:textColor="@color/text_color_2"
            android:layout_marginTop="16dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/btn_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>